sorting and order statistics/Code/output
heapsort.java:25: error: <identifier> expected
		int Left(i)
		          ^
heapsort.java:29: error: <identifier> expected
		int Right(i)
		           ^
2 errors
